k8s/production/ipwho-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipwho-production
  namespace: ipwho
  labels:
    app: ipwho-production
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ipwho-production

  template:
    metadata:
      name: ipwho-production
      labels:
        app: ipwho-production

    spec:
      containers:
        - name: ipwho-backend
          image: registry.gyanaavaibhav.in/ipwho-backend-prod:latest
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
            - node build/app.mjs
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: mainfiles-copy
              mountPath: /app/mainFiles
              readOnly: true

            - name: frontend-build
              mountPath: /app/frontendBuild
              readOnly: true

          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"

      imagePullSecrets:
        - name: regcred

      volumes:
        - name: frontend-build
          emptyDir: {}

        - name: mainfiles
          persistentVolumeClaim:
            claimName: ipwho-backend-readonly-pvc

        - name: mainfiles-copy
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ipwho-backend
  namespace: ipwho
spec:
  selector:
    app: ipwho-production
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000 # The port inside the Pod
